--- a/formValidation.html
+++ b/formValidation.html
@@ -46,7 +46,7 @@
                    </div>
                  </div>
                  </div>
-                <button type="submit">Sign Up</button>
+                <button  onclick="myFunction()"type="submit">Sign Up</button>
             </form>
                              <!-- Modal content-->
                    <!-- Modal -->
@@ -61,6 +61,11 @@
           <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Maxime, ut quia, tempore asperiores
                impedit quibusdam facere dolore reprehenderit ratione illo ducimus cupiditate modi alias 
                aspernatur aliquam quod velit architecto repellendus!</p>
+               <p>
+                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem tenetur esse officia ex labore nobis, 
+                 ipsa illo dolore, quidem quisquam autem quam cupiditate optio natus,
+                  vel similique deleniti asperiores magni.
+               </p>
         </div>
         <div class="modal-footer">
           <button id="accept-conditions" type="button" class="btn btn-default" data-dismiss="modal">Accept</button>
