--- a/Untitled-1.html
+++ b/Untitled-1.html
@@ -46,16 +46,16 @@
                   <a class="Update" href=""> <h6 >Terms and conditions</h6>
                  </a>
                  <div class="form-check">
-                   <input class="form-check-input" type="checkbox" value="" id="invalidCheck" required>
+                   <input class="form-check-input" type="checkbox" value=""  id="test2"id="invalidCheck" >
                    <label class="form-check-label" for="invalidCheck">
-                     Agree to terms and conditions
+                  
                    </label>
-                   <div class="invalid-feedback">
-                     You must agree before submitting.
+                   <div class="invalid-feedback" id="test">
+                    
                    </div>
                  </div>
                  </div>
-                <button type="submit">Sign Up</button>
+                <button type="submit" id="button-avaiable" >Sign Up</button>
             </form>
                              <!-- Modal content-->
                    <!-- Modal -->
@@ -81,6 +81,6 @@
    <!--Javascript-->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-    <script src="./javascript/script.js"></script>
+    <script src="./javascript/script3.js"></script>
     </body>
 </html>
