--- a/formValidation.html
+++ b/formValidation.html
@@ -42,7 +42,7 @@
                    <label class="form-check-label"  id="id-checkbox" for="invalidCheck" >
                     <a class="Update" href=""> <h6 >Terms and conditions</h6></a>
                    </label>
-                   <div class="invalid-feedback" id="hide" style="color: red;">
+                   <div class="invalid-feedback" id="hide" style="color: red; visibility: hidden;" >
                      You must agree before submitting.
                    </div>
                  </div>
